dev/manifests/3rd-party/jenkins/jenkins-controller-statefulset.yaml
---
# Source: jenkins/templates/jenkins-controller-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  namespace: hornet
  labels:
    "app.kubernetes.io/name": 'jenkins'
    "helm.sh/chart": "jenkins-3.8.8"
    "app.kubernetes.io/managed-by": "Helm"
    "app.kubernetes.io/instance": "jenkins"
    "app.kubernetes.io/component": "jenkins-controller"
  annotations:
    pia-team.com/role: pia.k8s.jenkins.customer/0.12.0
spec:
  serviceName: jenkins
  replicas: 1
  selector:
    matchLabels:
      "app.kubernetes.io/component": "jenkins-controller"
      "app.kubernetes.io/instance": "jenkins"
  template:
    metadata:
      labels:
        "app.kubernetes.io/name": 'jenkins'
        "app.kubernetes.io/managed-by": "Helm"
        "app.kubernetes.io/instance": "jenkins"
        "app.kubernetes.io/component": "jenkins-controller"
      annotations:
        checksum/config: 761ba61001154d002ad29377f4bb3020551252d9f7fb6f2f0d271f54f391a4d8
    spec:
      securityContext:
        fsGroup: 0
        runAsNonRoot: false
        runAsUser: 1000
      serviceAccountName: "jenkins"
      containers:
      - name: jenkins
        image: "europe-docker.pkg.dev/dnext-io/ghcr-dnext-technology/dnext-technology/fletcher:v0.12.0"
        imagePullPolicy: "IfNotPresent"
        args: ["--httpPort=8080"]
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: agent-listener
        - containerPort: 5000
          name: http-app-server
        - containerPort: 5001
          name: http-ci-utility
        livenessProbe:
          failureThreshold: 100
          httpGet:
            path: '/login'
            port: http
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: '/login'
            port: http
          periodSeconds: 10
          timeoutSeconds: 5
        startupProbe:
          failureThreshold: 100
          httpGet:
            path: '/login'
            port: http
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2000m
            memory: 2048Mi
          requests:
            cpu: 250m
            memory: 1536Mi
        volumeMounts:
        - mountPath: /tmp/pia/groovy
          name: jenkins-groovy-folder
          readOnly: true
        - mountPath: /tmp/pia/groovy-render
          name: jenkins-groovy-render-folder
        - mountPath: /keys
          name: secret-unsealer-keys
        - mountPath: /var/jenkins_home
          name: jenkins-home
          readOnly: false
        - mountPath: /var/jenkins_config
          name: jenkins-config
          readOnly: true
        - mountPath: /usr/share/jenkins/ref/plugins/
          name: plugin-dir
          readOnly: false
        - name: sc-config-volume
          mountPath: /var/jenkins_home/casc_configs
        - name: admin-secret
          mountPath: /run/secrets/chart-admin-username
          subPath: jenkins-admin-user
          readOnly: true
        - name: admin-secret
          mountPath: /run/secrets/chart-admin-password
          subPath: jenkins-admin-password
          readOnly: true
        - name: jenkins-cache
          mountPath: /var/jenkins_cache
      - name: config-reload
        image: "europe-docker.pkg.dev/dnext-io/ghcr-dnext-technology/dnext-technology/3rd-party/kiwigrid/k8s-sidecar:1.3.0"
        imagePullPolicy: IfNotPresent
        resources: {}
        volumeMounts:
        - name: sc-config-volume
          mountPath: "/var/jenkins_home/casc_configs"
        - name: jenkins-home
          mountPath: /var/jenkins_home
      - command:
        - python3
        - -m
        - flask
        - run
        - --host=0.0.0.0
        - --port=5001
        image: 
          europe-docker.pkg.dev/dnext-io/ghcr-dnext-technology/dnext-technology/ci-utility:main-20241001-171957-518
        name: ci-utility
      - args:
        - --save
        - ""
        image: 
          europe-docker.pkg.dev/dnext-io/ghcr-dnext-technology/dnext-technology/3rd-party/library/redis:7.2.2
        name: redis
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 10m
            memory: 128Mi
      - env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: IN_HOUSE_APP_PREFIX
          value: pia-team.com
        - name: PYTHONUNBUFFERED
          value: "TRUE"
        - name: COVERAGE_MODE
          value: namespaced
        - name: FLASK_DEBUG
          value: "1"
        image: 
          europe-docker.pkg.dev/dnext-io/ghcr-dnext-technology/dnext-technology/kube-app-server:main-20241007-162601-527
        name: kube-app-server
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: LABEL
          value: jenkins-job-defs-config
        - name: FOLDER
          value: /tmp/pia/groovy-render
        - name: NAMESPACE
          value: hornet
        image: 
          europe-docker.pkg.dev/dnext-io/ghcr-dnext-technology/dnext-technology/3rd-party/kiwigrid/k8s-sidecar:1.3.0
        imagePullPolicy: IfNotPresent
        name: config-reload-jobs
        volumeMounts:
        - mountPath: /tmp/pia/groovy-render
          name: jenkins-groovy-render-folder

      volumes:
      - configMap:
          name: jenkins-job-defs
        name: jenkins-groovy-folder
      - emptyDir: {}
        name: jenkins-groovy-render-folder
      - emptyDir: {}
        name: secret-unsealer-keys
      - name: plugins
        emptyDir: {}
      - name: jenkins-config
        configMap:
          name: jenkins
      - name: plugin-dir
        emptyDir: {}
      - name: jenkins-cache
        emptyDir: {}
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins
      - name: sc-config-volume
        emptyDir: {}
      - name: admin-secret
        secret:
          secretName: jenkins
      imagePullSecrets:
      - name: reg-creds
