dev/manifests/3rd-party/jenkins/ci-utility-ingress.yml
---
# Source: xxxxx/templates/ci-utility-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-utility
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    pia-team.com/family: orbitant

    pia-team.com/role: pia.k8s.jenkins.customer/0.12.0
spec:
  ingressClassName: nginx
  rules:
  - host: ci-utility.orbitant.192.168.21.10.nip.io
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 5001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ci-utility.orbitant.192.168.21.10.nip.io
    secretName: wildcard-tls
