dev/manifests/3rd-party/jenkins/kube-app-server-ingress.yml
---
# Source: xxxxx/templates/kube-app-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-app-server
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    pia-team.com/family: orbitant

    pia-team.com/role: pia.k8s.jenkins.customer/0.12.0
spec:
  ingressClassName: nginx
  rules:
  - host: kube-app-server.orbitant.192.168.21.10.nip.io
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kube-app-server.orbitant.192.168.21.10.nip.io
    secretName: wildcard-tls
