dev/manifests/3rd-party/jenkins/jenkins-egress-network-policy.yml
---
# Source: xxxxx/templates/jenkins-egress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jenkins-egress
  annotations:
    pia-team.com/role: pia.k8s.jenkins.customer/0.12.0
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 53
      protocol: UDP
    - port: 80
      protocol: TCP
    - port: 8080
      protocol: TCP
    - port: 8200
      protocol: TCP
    - port: 443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.21.0/24
    ports:
    - port: 8443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        # cidr: 140.82.112.0/20 # api.github.com
    ports:
    - port: 443
      protocol: TCP

  podSelector:
    matchLabels:
      app.kubernetes.io/component: jenkins-controller
      app.kubernetes.io/instance: jenkins
  policyTypes:
  - Egress
